--- a/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,46 +22,69 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="welcomeScreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="K1E-6W-kNj">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcomeScreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="K1E-6W-kNj">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="O2G-iW-Ql3">
-                                <rect key="frame" x="123" y="7" width="129" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="O2G-iW-Ql3">
+                                <rect key="frame" x="128" y="20" width="119" height="20"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="GO ALL IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cs3-7r-med">
-                                <rect key="frame" x="50" y="102" width="275" height="88"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GO ALL IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cs3-7r-med">
+                                <rect key="frame" x="62.5" y="125" width="250" height="66"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="qgU-71-MsK"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="48"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ON GOING ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rfL-0V-qnU">
-                                <rect key="frame" x="50" y="174" width="275" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="23"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vBU-e4-4MQ" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
-                                <rect key="frame" x="25" y="604" width="334" height="43"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vBU-e4-4MQ" customClass="BorderButton" customModule="app_swoosh" customModuleProvider="target">
+                                <rect key="frame" x="16" y="597" width="343" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.40375943791946306" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="dAv-Uz-sI2"/>
+                                </constraints>
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Find a team in your city &amp; dominate the league" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yiy-Kd-LNM">
-                                <rect key="frame" x="50" y="250" width="275" height="54"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find a team in your city &amp; dominate the league" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yiy-Kd-LNM">
+                                <rect key="frame" x="62.5" y="237.5" width="250" height="44"/>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON GOING ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rfL-0V-qnU">
+                                <rect key="frame" x="62.5" y="191" width="250" height="31.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="23"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="rfL-0V-qnU" firstAttribute="width" secondItem="cs3-7r-med" secondAttribute="width" id="4HS-KY-5ay"/>
+                            <constraint firstItem="vBU-e4-4MQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="83k-nN-q0q"/>
+                            <constraint firstItem="O2G-iW-Ql3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8Ld-Fv-7Rg"/>
+                            <constraint firstItem="vBU-e4-4MQ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="B1T-xh-DvZ"/>
+                            <constraint firstItem="cs3-7r-med" firstAttribute="top" secondItem="O2G-iW-Ql3" secondAttribute="bottom" constant="85" id="Dev-MR-05k"/>
+                            <constraint firstItem="K1E-6W-kNj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="JnG-3F-7DG"/>
+                            <constraint firstItem="O2G-iW-Ql3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="20" id="OXZ-WI-Xhy"/>
+                            <constraint firstItem="rfL-0V-qnU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="P1d-1r-WkL"/>
+                            <constraint firstAttribute="trailing" secondItem="K1E-6W-kNj" secondAttribute="trailing" id="UTI-1H-pfv"/>
+                            <constraint firstItem="K1E-6W-kNj" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="VXu-7s-m8X"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="vBU-e4-4MQ" secondAttribute="bottom" constant="20" id="Yvt-L5-nF2"/>
+                            <constraint firstItem="cs3-7r-med" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cFp-df-0zt"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="K1E-6W-kNj" secondAttribute="bottom" id="iCF-ak-Fhv"/>
+                            <constraint firstItem="Yiy-Kd-LNM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kB1-x4-nhq"/>
+                            <constraint firstItem="rfL-0V-qnU" firstAttribute="top" secondItem="cs3-7r-med" secondAttribute="bottom" id="nds-C7-aCh"/>
+                            <constraint firstItem="Yiy-Kd-LNM" firstAttribute="top" secondItem="rfL-0V-qnU" secondAttribute="bottom" constant="15" id="neC-lK-ldT"/>
+                            <constraint firstItem="Yiy-Kd-LNM" firstAttribute="width" secondItem="rfL-0V-qnU" secondAttribute="width" id="qpv-Hs-BwE"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bgImg" destination="K1E-6W-kNj" id="8Me-y9-xgd"/>
+                        <outlet property="swoosh" destination="O2G-iW-Ql3" id="ptc-5s-SCY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
