--- a/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--WelcomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -93,10 +93,10 @@
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
-        <!--View Controller-->
+        <!--LeagueVC-->
         <scene sceneID="1mM-Bc-2u6">
             <objects>
-                <viewController id="U0h-UL-mx8" sceneMemberID="viewController">
+                <viewController id="U0h-UL-mx8" customClass="LeagueVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="2kJ-Ci-S9f"/>
                         <viewControllerLayoutGuide type="bottom" id="TQX-am-Vsc"/>
@@ -213,10 +213,10 @@
             </objects>
             <point key="canvasLocation" x="942" y="139"/>
         </scene>
-        <!--View Controller-->
+        <!--SkillVC-->
         <scene sceneID="fQd-ye-FRN">
             <objects>
-                <viewController id="vDS-fF-KuL" sceneMemberID="viewController">
+                <viewController id="vDS-fF-KuL" customClass="SkillVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ehB-ar-DfC"/>
                         <viewControllerLayoutGuide type="bottom" id="osg-jL-lhR"/>
